{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 7653,
  "lineage": "b4ee9b71-f31c-9a13-9ade-a5fe185a2945",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085d7a7964bbe3af8",
            "arn": "arn:aws:ec2:us-east-1:950876749850:elastic-ip/eipalloc-085d7a7964bbe3af8",
            "association_id": "eipassoc-0069fdc084788319a",
            "domain": "vpc",
            "id": "eipalloc-085d7a7964bbe3af8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fa2389339937008b",
            "private_dns": "ip-10-30-1-128.ec2.internal",
            "private_ip": "10.30.1.128",
            "public_dns": "ec2-44-205-161-40.compute-1.amazonaws.com",
            "public_ip": "44.205.161.40",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:950876749850:instance/i-0355f9214fc34a4d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iam-profile",
            "id": "i-0355f9214fc34a4d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ab3bb574fc7ce3c0"
              }
            ],
            "primary_network_interface_id": "eni-0ab3bb574fc7ce3c0",
            "private_dns": "ip-10-30-1-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.13",
            "public_dns": "ec2-100-27-15-141.compute-1.amazonaws.com",
            "public_ip": "100.27.15.141",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d08ade86a27a624",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3c8a4d28062f49b",
            "tags": {
              "Name": "ec2-lab"
            },
            "tags_all": {
              "Name": "ec2-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c9f11b24dfa25c2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "i-0355f9214fc34a4d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_lab_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:950876749850:instance/i-06f21545f4c213d50",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iam-profile",
            "id": "i-06f21545f4c213d50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03d29b537e75ca90c"
              }
            ],
            "primary_network_interface_id": "eni-03d29b537e75ca90c",
            "private_dns": "ip-10-30-11-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.11.135",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c662a9a81e2acf98",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00625ef1ff7edc09d",
            "tags": {
              "Name": "ec2-private"
            },
            "tags_all": {
              "Name": "ec2-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1b16a0ee936b518"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "i-06f21545f4c213d50",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:internet-gateway/igw-098a38a4d6d519098",
            "id": "igw-098a38a4d6d519098",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "armageddon_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "armageddon-alb-logs-950876749850",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:loadbalancer/app/armageddon-alb/5c8092f5cce24228",
            "arn_suffix": "app/armageddon-alb/5c8092f5cce24228",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "armageddon-alb-972617337.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950876749850:loadbalancer/app/armageddon-alb/5c8092f5cce24228",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "armageddon-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-04e109b1108641c71"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ec04305d0f084b0e"
              },
              {
                "subnet_id": "subnet-0f3c8a4d28062f49b"
              }
            ],
            "subnets": [
              "subnet-0ec04305d0f084b0e",
              "subnet-0f3c8a4d28062f49b"
            ],
            "tags": {
              "Name": "armageddon-alb"
            },
            "tags_all": {
              "Name": "armageddon-alb"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:loadbalancer/app/armageddon-alb/5c8092f5cce24228"
          },
          "dependencies": [
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/32a4af720fdcfd4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/32a4af720fdcfd4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:loadbalancer/app/armageddon-alb/5c8092f5cce24228",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/32a4af720fdcfd4e"
          },
          "dependencies": [
            "aws_lb.armageddon_alb",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d",
            "certificate_arn": "arn:aws:acm:us-east-1:950876749850:certificate/ab7c9e94-93e4-427d-837d-80feff958687",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:targetgroup/armageddon-tg/08ba4b6705e5fce4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:loadbalancer/app/armageddon-alb/5c8092f5cce24228",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01",
            "aws_lb.armageddon_alb",
            "aws_lb_target_group.armageddon_tg",
            "aws_route53_record.armageddon_record",
            "aws_route53_zone.armageddon_zone01",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_acm_certificate.existing",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "armageddon_require_origin_header",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:targetgroup/armageddon-tg/08ba4b6705e5fce4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener-rule/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d/721401816cad4301",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "King-Iron-Fist",
                    "regex_values": [],
                    "values": [
                      "fKJTj0aJP06AklyyFl15ZEV8ZtqvVS6P"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener-rule/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d/721401816cad4301",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener-rule/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d/721401816cad4301"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01",
            "aws_lb.armageddon_alb",
            "aws_lb_listener.armageddon_https_listener",
            "aws_lb_target_group.armageddon_tg",
            "aws_route53_record.armageddon_record",
            "aws_route53_zone.armageddon_zone01",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_acm_certificate.existing",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self",
            "random_password.armageddon_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "armageedon_default_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener-rule/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d/28796953687f2194",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener-rule/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d/28796953687f2194",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d",
            "priority": 99,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:listener-rule/app/armageddon-alb/5c8092f5cce24228/864475416c555c4d/28796953687f2194"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01",
            "aws_lb.armageddon_alb",
            "aws_lb_listener.armageddon_https_listener",
            "aws_lb_target_group.armageddon_tg",
            "aws_route53_record.armageddon_record",
            "aws_route53_zone.armageddon_zone01",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_acm_certificate.existing",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "armageddon_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:targetgroup/armageddon-tg/08ba4b6705e5fce4",
            "arn_suffix": "targetgroup/armageddon-tg/08ba4b6705e5fce4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950876749850:targetgroup/armageddon-tg/08ba4b6705e5fce4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:950876749850:loadbalancer/app/armageddon-alb/5c8092f5cce24228"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "armageddon-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "armageddon-tg"
            },
            "tags_all": {
              "Name": "armageddon-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:targetgroup/armageddon-tg/08ba4b6705e5fce4"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "armageddon_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:950876749850:targetgroup/armageddon-tg/08ba4b6705e5fce4-2026020720124143260000000e",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:950876749850:targetgroup/armageddon-tg/08ba4b6705e5fce4",
            "target_id": "i-06f21545f4c213d50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.iam_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.ec2_private_b",
            "aws_lb_target_group.armageddon_tg",
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085d7a7964bbe3af8",
            "association_id": "eipassoc-0069fdc084788319a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d79bd7181b95bcb1",
            "network_interface_id": "eni-0fa2389339937008b",
            "private_ip": "10.30.1.128",
            "public_ip": "44.205.161.40",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f3c8a4d28062f49b",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:route-table/rtb-0a62194cd049bc0c1",
            "id": "rtb-0a62194cd049bc0c1",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d79bd7181b95bcb1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-0a62194cd049bc0c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:route-table/rtb-08350457b14240e3b",
            "id": "rtb-08350457b14240e3b",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098a38a4d6d519098",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-08350457b14240e3b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012521b3c4320f05b",
            "region": "us-east-1",
            "route_table_id": "rtb-0a62194cd049bc0c1",
            "subnet_id": "subnet-00625ef1ff7edc09d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cd090ffb12e7e1e",
            "region": "us-east-1",
            "route_table_id": "rtb-0a62194cd049bc0c1",
            "subnet_id": "subnet-080b32144a5a226e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071c7aecd5add65a4",
            "region": "us-east-1",
            "route_table_id": "rtb-0a62194cd049bc0c1",
            "subnet_id": "subnet-01ce9188be9a208e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8f44da51015acd8",
            "region": "us-east-1",
            "route_table_id": "rtb-08350457b14240e3b",
            "subnet_id": "subnet-0f3c8a4d28062f49b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe34ecb584d6404a",
            "region": "us-east-1",
            "route_table_id": "rtb-08350457b14240e3b",
            "subnet_id": "subnet-0ec04305d0f084b0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0050d57508b941398",
            "region": "us-east-1",
            "route_table_id": "rtb-08350457b14240e3b",
            "subnet_id": "subnet-056a69e707d121d59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group/sg-04e109b1108641c71",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1b16a0ee936b518"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-04e109b1108641c71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-3b927c52"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-04e109b1108641c71",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group/sg-08c9f11b24dfa25c2",
            "description": "sg for http browser \u0026 ssh into",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c9f11b24dfa25c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "174.245.87.223/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-lab",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-lab-sg"
            },
            "tags_all": {
              "Name": "ec2-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-08c9f11b24dfa25c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2pri_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group/sg-0b1b16a0ee936b518",
            "description": "SG for VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1b16a0ee936b518",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e109b1108641c71"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2pri-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2pri-sg"
            },
            "tags_all": {
              "Name": "ec2pri-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0b1b16a0ee936b518",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group/sg-0db9be4322c022fd9",
            "description": "sg for rds private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db9be4322c022fd9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c9f11b24dfa25c2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-lab",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-lab-sg"
            },
            "tags_all": {
              "Name": "rds-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0db9be4322c022fd9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http_cf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-54121020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-3b927c52"
            ],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-04e109b1108641c71",
            "security_group_rule_id": "sgr-0b5bc587ae8f454a9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc",
            "data.aws_ec2_managed_prefix_list.armageddon_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1490254577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-04e109b1108641c71",
            "security_group_rule_id": "sgr-03ed51f2341de0f45",
            "self": false,
            "source_security_group_id": "sg-0b1b16a0ee936b518",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2pri_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2924428365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0b1b16a0ee936b518",
            "security_group_rule_id": "sgr-055f5c57f2767357e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_from_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2373559314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0b1b16a0ee936b518",
            "security_group_rule_id": "sgr-074bb4ff7d9f346bd",
            "self": false,
            "source_security_group_id": "sg-04e109b1108641c71",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2pri_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-00625ef1ff7edc09d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00625ef1ff7edc09d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-00625ef1ff7edc09d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-080b32144a5a226e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b32144a5a226e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-080b32144a5a226e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-01ce9188be9a208e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce9188be9a208e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-01ce9188be9a208e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-0f3c8a4d28062f49b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3c8a4d28062f49b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0f3c8a4d28062f49b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-0ec04305d0f084b0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec04305d0f084b0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0ec04305d0f084b0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-056a69e707d121d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056a69e707d121d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-c"
            },
            "tags_all": {
              "Name": "public-c"
            },
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-056a69e707d121d59",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc/vpc-0805c528c63e6ebb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-005d3d4bc1a499f68",
            "default_route_table_id": "rtb-02f240fdcd18bd4a8",
            "default_security_group_id": "sg-0992eabac8f9fcbbb",
            "dhcp_options_id": "dopt-0a73e383ca9cf31a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0805c528c63e6ebb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f240fdcd18bd4a8",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpc-0805c528c63e6ebb1",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc-endpoint/vpce-07914d078fb7ad193",
            "dns_entry": [
              {
                "dns_name": "vpce-07914d078fb7ad193-znd64uz8.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07914d078fb7ad193-znd64uz8-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0788955HKDTZB7T7IH4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07914d078fb7ad193",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b5de7c13fe187e7"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1b16a0ee936b518"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.198",
                "subnet_id": "subnet-00625ef1ff7edc09d"
              }
            ],
            "subnet_ids": [
              "subnet-00625ef1ff7edc09d"
            ],
            "tags": {
              "Name": "ec2pri-ec2messages"
            },
            "tags_all": {
              "Name": "ec2pri-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-07914d078fb7ad193",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc-endpoint/vpce-05b73d3caa91b213a",
            "dns_entry": [
              {
                "dns_name": "vpce-05b73d3caa91b213a-9u37ypf8.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05b73d3caa91b213a-9u37ypf8-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z1005813TSV84Z9EB9HQ"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z02921831821RI7S8FW9Q"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05b73d3caa91b213a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a458457acd27c7ee"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1b16a0ee936b518"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.175",
                "subnet_id": "subnet-00625ef1ff7edc09d"
              }
            ],
            "subnet_ids": [
              "subnet-00625ef1ff7edc09d"
            ],
            "tags": {
              "Name": "ec2pri-kms"
            },
            "tags_all": {
              "Name": "ec2pri-kms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-05b73d3caa91b213a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc-endpoint/vpce-081ec475c56505013",
            "dns_entry": [
              {
                "dns_name": "vpce-081ec475c56505013-seaqlp90.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-081ec475c56505013-seaqlp90-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0788971AVS3LHMRKOUC"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z078897425MPU8489QB40"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z10116912XI4PZHQGNJDD"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z10043563SU839M7YUBAI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-081ec475c56505013",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0833aa7707aba400b"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1b16a0ee936b518"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.72",
                "subnet_id": "subnet-00625ef1ff7edc09d"
              }
            ],
            "subnet_ids": [
              "subnet-00625ef1ff7edc09d"
            ],
            "tags": {
              "Name": "ec2pri-logs"
            },
            "tags_all": {
              "Name": "ec2pri-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-081ec475c56505013",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_s3_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc-endpoint/vpce-017f228d4893cf23a",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-017f228d4893cf23a",
            "ip_address_type": "ipv4",
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a62194cd049bc0c1"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "ec2pri-s3-gw"
            },
            "tags_all": {
              "Name": "ec2pri-s3-gw"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-017f228d4893cf23a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_secrets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc-endpoint/vpce-063222782c58dc056",
            "dns_entry": [
              {
                "dns_name": "vpce-063222782c58dc056-69olatdc.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-063222782c58dc056-69olatdc-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02930333PHZHSQA8D29H"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-063222782c58dc056",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-013288fdbf07ce138"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1b16a0ee936b518"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.35",
                "subnet_id": "subnet-00625ef1ff7edc09d"
              }
            ],
            "subnet_ids": [
              "subnet-00625ef1ff7edc09d"
            ],
            "tags": {
              "Name": "ec2pri-secrets"
            },
            "tags_all": {
              "Name": "ec2pri-secrets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-063222782c58dc056",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc-endpoint/vpce-042cad68e32bba855",
            "dns_entry": [
              {
                "dns_name": "vpce-042cad68e32bba855-5is9yxa5.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-042cad68e32bba855-5is9yxa5-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10043164SNQR97YXD5Q"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z10052492EU6AOA8CSYSB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-042cad68e32bba855",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0639ee90e8c5adfbf"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1b16a0ee936b518"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.123",
                "subnet_id": "subnet-00625ef1ff7edc09d"
              }
            ],
            "subnet_ids": [
              "subnet-00625ef1ff7edc09d"
            ],
            "tags": {
              "Name": "ec2pri-ssm"
            },
            "tags_all": {
              "Name": "ec2pri-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-042cad68e32bba855",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc-endpoint/vpce-0a1d1081eb1f863c4",
            "dns_entry": [
              {
                "dns_name": "vpce-0a1d1081eb1f863c4-rf92uzil.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a1d1081eb1f863c4-rf92uzil-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07881631B1PEN1WW9H77"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z100790239X8HHJKNMFK8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a1d1081eb1f863c4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02acb23cc423eb7ce"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b1b16a0ee936b518"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.160",
                "subnet_id": "subnet-00625ef1ff7edc09d"
              }
            ],
            "subnet_ids": [
              "subnet-00625ef1ff7edc09d"
            ],
            "tags": {
              "Name": "vpcend-ssmmessages"
            },
            "tags_all": {
              "Name": "vpcend-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0805c528c63e6ebb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0a1d1081eb1f863c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_lab_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-02728bafa98f835f3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02728bafa98f835f3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08c9f11b24dfa25c2",
            "security_group_rule_id": "sgr-02728bafa98f835f3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-02728bafa98f835f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_mysql_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-08d13b020f1435492",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08d13b020f1435492",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0db9be4322c022fd9",
            "security_group_rule_id": "sgr-08d13b020f1435492",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-08d13b020f1435492",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_lab_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-0c80c0790745536a6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c80c0790745536a6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08c9f11b24dfa25c2",
            "security_group_rule_id": "sgr-0c80c0790745536a6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0c80c0790745536a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_lab_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-05ba3db84ddfce33f",
            "cidr_ipv4": "174.245.87.223/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05ba3db84ddfce33f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08c9f11b24dfa25c2",
            "security_group_rule_id": "sgr-05ba3db84ddfce33f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-05ba3db84ddfce33f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2pri_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-0f89332287f61f06f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f89332287f61f06f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b1b16a0ee936b518",
            "security_group_rule_id": "sgr-0f89332287f61f06f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0f89332287f61f06f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2pri_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_lab_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-05532b219843351fc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-05532b219843351fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08c9f11b24dfa25c2",
            "region": "us-east-1",
            "security_group_id": "sg-0db9be4322c022fd9",
            "security_group_rule_id": "sgr-05532b219843351fc",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-05532b219843351fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}